# gen/restapi/operations/apps/release_app.go
@@ -1,0 +1,58 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package apps
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	middleware "github.com/go-openapi/runtime/middleware"
+)
+
+// ReleaseAppHandlerFunc turns a function with the right signature into a release app handler
+type ReleaseAppHandlerFunc func(ReleaseAppParams) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn ReleaseAppHandlerFunc) Handle(params ReleaseAppParams) middleware.Responder {
+	return fn(params)
+}
+
+// ReleaseAppHandler interface for that can handle valid release app params
+type ReleaseAppHandler interface {
+	Handle(ReleaseAppParams) middleware.Responder
+}
+
+// NewReleaseApp creates a new http.Handler for the release app operation
+func NewReleaseApp(ctx *middleware.Context, handler ReleaseAppHandler) *ReleaseApp {
+	return &ReleaseApp{Context: ctx, Handler: handler}
+}
+
+/*ReleaseApp swagger:route POST /app/release apps releaseApp
+
+Generates a new Kruise application
+
+*/
+type ReleaseApp struct {
+	Context *middleware.Context
+	Handler ReleaseAppHandler
+}
+
+func (o *ReleaseApp) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		r = rCtx
+	}
+	var Params = NewReleaseAppParams()
+
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params) // actually handle the request
+
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
