# gen/restapi/operations/apps/release_app_responses.go
@@ -1,0 +1,158 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package apps
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "deploy-wizard/gen/models"
+)
+
+// ReleaseAppCreatedCode is the HTTP code returned for type ReleaseAppCreated
+const ReleaseAppCreatedCode int = 201
+
+/*ReleaseAppCreated created
+
+swagger:response releaseAppCreated
+*/
+type ReleaseAppCreated struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ValidationResponse `json:"body,omitempty"`
+}
+
+// NewReleaseAppCreated creates ReleaseAppCreated with default headers values
+func NewReleaseAppCreated() *ReleaseAppCreated {
+
+	return &ReleaseAppCreated{}
+}
+
+// WithPayload adds the payload to the release app created response
+func (o *ReleaseAppCreated) WithPayload(payload *models.ValidationResponse) *ReleaseAppCreated {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the release app created response
+func (o *ReleaseAppCreated) SetPayload(payload *models.ValidationResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *ReleaseAppCreated) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(201)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// ReleaseAppBadRequestCode is the HTTP code returned for type ReleaseAppBadRequest
+const ReleaseAppBadRequestCode int = 400
+
+/*ReleaseAppBadRequest Bad request
+
+swagger:response releaseAppBadRequest
+*/
+type ReleaseAppBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload string `json:"body,omitempty"`
+}
+
+// NewReleaseAppBadRequest creates ReleaseAppBadRequest with default headers values
+func NewReleaseAppBadRequest() *ReleaseAppBadRequest {
+
+	return &ReleaseAppBadRequest{}
+}
+
+// WithPayload adds the payload to the release app bad request response
+func (o *ReleaseAppBadRequest) WithPayload(payload string) *ReleaseAppBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the release app bad request response
+func (o *ReleaseAppBadRequest) SetPayload(payload string) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *ReleaseAppBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	payload := o.Payload
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+
+}
+
+/*ReleaseAppDefault Internal server error
+
+swagger:response releaseAppDefault
+*/
+type ReleaseAppDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload string `json:"body,omitempty"`
+}
+
+// NewReleaseAppDefault creates ReleaseAppDefault with default headers values
+func NewReleaseAppDefault(code int) *ReleaseAppDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &ReleaseAppDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the release app default response
+func (o *ReleaseAppDefault) WithStatusCode(code int) *ReleaseAppDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the release app default response
+func (o *ReleaseAppDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the release app default response
+func (o *ReleaseAppDefault) WithPayload(payload string) *ReleaseAppDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the release app default response
+func (o *ReleaseAppDefault) SetPayload(payload string) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *ReleaseAppDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	payload := o.Payload
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+
+}
